[hotfix] Fix color of group titles in editor

--- a/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
+++ b/ui/src/app/editor/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
@@ -110,6 +110,7 @@
   border-radius: 3px;
   font-size: small;
   background: var(--color-primary);
+  color: var(--color-accent);
 }
 
 .sort-option {
