[hotfix] Add minor style improvements to schema editor

--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.html
@@ -55,6 +55,17 @@
                                          (removeSelectedPropertiesEmitter)="removeSelectedProperties()">
                 </sp-schema-editor-header>
             </div>
+            <div header *ngIf="!isLoading && isError" fxFlex="100">
+                <div fxLayout="row" fxLayoutAlign="end center">
+                    <button color="accent"
+                            mat-button
+                            mat-icon-button
+                            matTooltip="Refresh Schema"
+                            (click)="guessSchema()">
+                        <mat-icon>refresh</mat-icon>
+                    </button>
+                </div>
+            </div>
 
             <div fxFlex="100">
 
