--- a/ui/src/scss/_variables.scss
+++ b/ui/src/scss/_variables.scss
@@ -34,7 +34,8 @@ body {
   --color-data-view: rgb(122, 206, 227);
   --color-dashboard: rgb(76, 115, 164);
   --color-adapter: rgb(182, 140, 97);
-  --color-stream: $sp-color-stream;
+  --color-data-source: #ffa23b;
   --color-pipeline: rgb(102, 185, 114);
+  --color-measurement: rgb(39, 164, 155);
 
 }
