--- a/ui/src/app/configuration/export/import-dialog/data-import-dialog.component.scss
+++ b/ui/src/app/configuration/export/import-dialog/data-import-dialog.component.scss
@@ -16,8 +16,4 @@
  *
  */
 
-package org.apache.streampipes.dataexplorer.sdk;
-
-public enum DataLakeQueryOrdering {
-    ASC, DESC
-}
+@import '../../../../scss/sp/sp-dialog.scss';
