--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.html
@@ -124,7 +124,8 @@
                 </div>
                 <div fxLayout="column" fxFlex="100" class="data-explorer-options-panel"
                      *ngIf="sourceConfig.queryType && sourceConfig.measure">
-                    <sp-field-selection-panel #fieldSelectionPanel [sourceConfig]="sourceConfig"
+                    <sp-field-selection-panel #fieldSelectionPanel 
+                                              [sourceConfig]="sourceConfig"
                                               [widgetId]="widgetId"></sp-field-selection-panel>
                 </div>
                 <div fxLayout="column" fxFlex="100" class="data-explorer-options-panel"
@@ -134,7 +135,8 @@
                 </div>
                 <div fxLayout="column" fxFlex="100" class="data-explorer-options-panel"
                      *ngIf="sourceConfig.queryType && sourceConfig.measure">
-                    <sp-group-selection-panel [sourceConfig]="sourceConfig"
+                    <sp-group-selection-panel #groupSelectionPanel
+                                              [sourceConfig]="sourceConfig"
                                               [widgetId]="widgetId"></sp-group-selection-panel>
                 </div>
             </div>
