[hotfix] Improve resizing of echarts widgets

--- a/ui/src/app/dashboard/components/grid/dashboard-grid.component.html
+++ b/ui/src/app/dashboard/components/grid/dashboard-grid.component.html
@@ -28,6 +28,7 @@
                               [widget]="item"
                               [editMode]="editMode"
                               [headerVisible]="headerVisible"
+                              [gridsterItemComponent]="gridsterItemComponent"
                               [itemWidth]="gridsterItemComponent.width"
                               [itemHeight]="gridsterItemComponent.height"
             ></dashboard-widget>
