--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -54,6 +54,7 @@
                     <number-widget [itemWidth]="itemWidth"
                                    [itemHeight]="itemHeight"
                                    [editMode]="editMode"
+                                   [gridsterItemComponent]="gridsterItemComponent"
                                    [widgetConfig]="configuredWidget" [widgetDataConfig]="widgetDataConfig"
                                    class="h-100"></number-widget>
                 </div>
@@ -61,6 +62,7 @@
                     <line-widget [itemWidth]="itemWidth"
                                  [itemHeight]="itemHeight"
                                  [editMode]="editMode"
+                                 [gridsterItemComponent]="gridsterItemComponent"
                                  [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></line-widget>
                 </div>
@@ -68,6 +70,7 @@
                     <area-widget [itemWidth]="itemWidth"
                                  [itemHeight]="itemHeight"
                                  [editMode]="editMode"
+                                 [gridsterItemComponent]="gridsterItemComponent"
                                  [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></area-widget>
                 </div>
@@ -75,6 +78,7 @@
                     <table-widget [itemWidth]="itemWidth"
                                   [itemHeight]="itemHeight"
                                   [editMode]="editMode"
+                                  [gridsterItemComponent]="gridsterItemComponent"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></table-widget>
                 </div>
@@ -82,6 +86,7 @@
                     <gauge-widget [itemWidth]="itemWidth"
                                   [itemHeight]="itemHeight"
                                   [editMode]="editMode"
+                                  [gridsterItemComponent]="gridsterItemComponent"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></gauge-widget>
                 </div>
@@ -89,6 +94,7 @@
                     <image-widget [itemWidth]="itemWidth"
                                   [itemHeight]="itemHeight"
                                   [editMode]="editMode"
+                                  [gridsterItemComponent]="gridsterItemComponent"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></image-widget>
                 </div>
@@ -96,6 +102,7 @@
                     <map-widget [itemWidth]="itemWidth"
                                 [itemHeight]="itemHeight"
                                 [editMode]="editMode"
+                                [gridsterItemComponent]="gridsterItemComponent"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></map-widget>
                 </div>
@@ -103,6 +110,7 @@
                     <raw-widget [itemWidth]="itemWidth"
                                 [itemHeight]="itemHeight"
                                 [editMode]="editMode"
+                                [gridsterItemComponent]="gridsterItemComponent"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></raw-widget>
                 </div>
@@ -110,6 +118,7 @@
                     <html-widget [itemWidth]="itemWidth"
                                  [itemHeight]="itemHeight"
                                  [editMode]="editMode"
+                                 [gridsterItemComponent]="gridsterItemComponent"
                                  [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></html-widget>
                 </div>
@@ -117,6 +126,7 @@
                     <traffic-light-widget [itemWidth]="itemWidth"
                                           [itemHeight]="itemHeight"
                                           [editMode]="editMode"
+                                          [gridsterItemComponent]="gridsterItemComponent"
                                           [widgetConfig]="configuredWidget"
                                           [widgetDataConfig]="widgetDataConfig" class="h-100"></traffic-light-widget>
                 </div>
@@ -124,6 +134,7 @@
                     <wordcloud-widget [itemWidth]="itemWidth"
                                       [itemHeight]="itemHeight"
                                       [editMode]="editMode"
+                                      [gridsterItemComponent]="gridsterItemComponent"
                                       [widgetConfig]="configuredWidget"
                                       [widgetDataConfig]="widgetDataConfig" class="h-100"></wordcloud-widget>
                 </div>
@@ -131,6 +142,7 @@
                     <status-widget [itemWidth]="itemWidth"
                                    [itemHeight]="itemHeight"
                                    [editMode]="editMode"
+                                   [gridsterItemComponent]="gridsterItemComponent"
                                    [widgetConfig]="configuredWidget"
                                    [widgetDataConfig]="widgetDataConfig" class="h-100"></status-widget>
                 </div>
@@ -138,6 +150,7 @@
                     <bar-race-widget [itemWidth]="itemWidth"
                                      [itemHeight]="itemHeight"
                                      [editMode]="editMode"
+                                     [gridsterItemComponent]="gridsterItemComponent"
                                      [widgetConfig]="configuredWidget"
                                      [widgetDataConfig]="widgetDataConfig" class="h-100"></bar-race-widget>
                 </div>
@@ -145,6 +158,7 @@
                     <stacked-line-chart-widget [itemWidth]="itemWidth"
                                                [itemHeight]="itemHeight"
                                                [editMode]="editMode"
+                                               [gridsterItemComponent]="gridsterItemComponent"
                                                [widgetConfig]="configuredWidget"
                                                [widgetDataConfig]="widgetDataConfig"
                                                class="h-100"></stacked-line-chart-widget>
