[STREAMPIPES-565] Add asset link type for files

--- a/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.html
+++ b/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.html
@@ -101,6 +101,18 @@
                     </mat-select>
                 </mat-form-field>
             </div>
+            <div *ngIf="selectedLinkType.linkQueryHint === 'file'" fxLayout="column" class="link-configuration">
+                <mat-form-field color="accent" fxFlex="100">
+                    <mat-label>Files</mat-label>
+                    <mat-select (selectionChange)="changeLabel($event.value.fileId, $event.value.originalFilename, $event.value)"
+                                [(value)]="currentResource"
+                                fxFlex
+                                required>
+                        <mat-option *ngFor="let file of files"
+                                    [value]="file">{{file.originalFilename}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
             <div fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent">
                     <mat-label>Label</mat-label>
