--- a/ui/src/scss/_variables.scss
+++ b/ui/src/scss/_variables.scss
@@ -37,5 +37,6 @@ body {
   --color-data-source: #ffa23b;
   --color-pipeline: rgb(102, 185, 114);
   --color-measurement: rgb(39, 164, 155);
+  --color-file: rgb(163, 98, 190);
 
 }
